# stpip

./: README.md  pyproject.toml  setup.py
stpip/: __info__.py  __main__.py  cli.py  display.py  scraping.py
stpip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
